adjusted oppgave1.html to fit main.css

--- a/main.html
+++ b/main.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 
 <html lang="no">
-
   	<head>
     	<title> My precious </title>
     	<meta charset="utf-8">
@@ -30,13 +29,13 @@
   			<div class="clickable">
   				<button type="button" class="button" onclick="rotate()">Click me, daddy!</button>
   			</div>
-  			
+
   		</div>
 
-  		<footer class="footer">
-  			<p>The making of this production was sponsored by the PC Master Race and <a class="link" href="https://media.giphy.com/media/10kABVanhwykJW/giphy.gif" target="_blank">our lord Gaben</a></p>
-  			
-  		</footer>
+		<footer class="footer">
+			<p>The making of this production was sponsored by the PC Master Race and <a class="link"
+        href="https://media.giphy.com/media/10kABVanhwykJW/giphy.gif" target="_blank">our lord Gaben</a></p>
+		</footer>
 
   		<script src="static/javascript/flippingscript.js"></script>
   	</body>
