--- a/grateful.html
+++ b/grateful.html
@@ -18,18 +18,22 @@
     	<h1>Cat GIFs</h1>
     </div>
 
-  	<div class="gif_div flex-item">
-      <img id="cat_gif" src="http://i.imgur.com/1Mh8yhv.gif" alt="Cat gif"/>
-    </div>
-    <div class="txt_div flex-item">
-          <p>
-            This website is dedicated to cat GIFs. <br />
-            Click the button for a new random GIF!
-          </p>
-          <button id="button_1" class="button">Click Me!</button>
-    </div>
-		<div class="footer flex-item">
-    </div>
+		<div class="main-box">
+			<div class="content column">
+	    	<img id="center-gif" class="pic" src="http://i.imgur.com/1Mh8yhv.gif" alt="Cat gif"/>
+	    <div class="description">
+	          <p>
+	            This website is dedicated to cat GIFs. <br />
+	            Click the button for a new random GIF!
+	          </p>
+	          <button id="button_1" class="button clickable">Click Me!</button>
+	    </div>
+		 </div>
+		</div>
+
+		<footer class="footer">
+			<p>The making of this production was sponsored by the PC Master Race and <a class="link" href="https://media.giphy.com/media/10kABVanhwykJW/giphy.gif" target="_blank">our lord Gaben</a></p>
+		</footer>
 
 </body>
 
