Added header subtext

--- a/grateful.html
+++ b/grateful.html
@@ -16,6 +16,7 @@
 
   	<div class="head" >
     	<h1>Cat GIFs</h1>
+			<p class="sub-header">Welcome to the cat section!</p>
     </div>
 
 		<div class="main-box">
